# relational_db

./: .gitignore  CMakeLists.txt  README.md  lab1_llp_report.docx  main.c
consts/: hash_consts.h  sector_consts.h  sectors.h  table_consts.h
debug/: debug_utils.c
include/debug/: debug_utils.h
include/files/: file_manager.h
include/instructions/: file_instructions.h
include/sectors/: sector_allocation_utils.h  sector_utils.h  sectors.h
include/tables/: table_cell_utils.h  table_index_utils.h  table_row_utils.h  table_schema_utils.h
include/types/: column_types.h  file_static_header.h  table_index.h
include/types/cell_types/: bigint_cell.h  bool_cell.h  cell.h  float_cell.h  int_cell.h  string_cell.h
include/types/index/: table_index.h
include/types/schema/: column_types.h  table_schema.h
include/types/static/: file_static_header.h
include/utils/: file_string_utils.h  hash_utils.h  static_header_utils.h  table_index_utils.h  table_schema_utils.h
instructions/: file_instructions.c
io/files/: file_manager.c
lab_bench_res/: benchmark_results.csv  fs_burn_test.csv  size_test.csv
lab_benchmarks/: main_benchmarks.c
lab_tests/: allocation_test.c  fill_rows.c  index_table.c  main_tests.c  table_creation.c  tests.h
operations/files/: create_static_header.c  create_static_header.h  static_header_utils.c
operations/schemas/: table_schema_utils.c
operations/sectors/: sector_alloc_utils.c  sector_allocation_utils.c  sector_allocation_utlis.c  sector_header_utils.c  sector_io_utils.c  sector_utils.c
operations/strings/: file_string_utils.c
operations/tables/: table_cell_utils.c  table_index_io_utils.c  table_index_utils.c  table_row_utils.c  table_schema_utils.c  table_schema_utils.h
scripts/: graphics_generator.py
tests/: allocation_test.c  data_save.c  header_test.c  index_table.c  sector_structs.c  table_creation.c  tests.h
types/: column_types.c
types/cell_types/: cell.c  int_cell.c
utils/: hash_utils.c
